--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -21,7 +21,7 @@ jobs:
         uses: threeal/gcovr-action@v1.0.0
         with:
           root: "${{ github.workspace }}"
-          exclude:
-            - "${{ github.workspace }}/build"
-            - "${{ github.workspace }}/test"
+          exclude: |
+            build
+            test
           output: coverage.xml
