--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -22,6 +22,6 @@ jobs:
         with:
           root: "${{ github.workspace }}"
           exclude: |
-            build/*
-            test/*
+            ${{ github.workspace }}/build/*
+            ${{ github.workspace }}/test/*
           output: coverage.xml
