--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -20,8 +20,6 @@ jobs:
       - name: Generate a code coverage report
         uses: threeal/gcovr-action@v1.0.0
         with:
-          root: "${{ github.workspace }}"
-          exclude: |
-            ${{ github.workspace }}/build/*
-            ${{ github.workspace }}/test/*
-          output: coverage.xml
+          excludes: |
+            build/*
+            test/*
