--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -19,9 +19,8 @@ jobs:
         run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build/test
       - name: Generate a code coverage report using gcovr
         run: |
-          /usr/bin/python3 -m pip install gcovr
-          cd ${{ github.workspace }}
-          /usr/bin/python3 -m gcovr --exclude-directories build --exclude-directories test --html-details details.html
+          python3 -m pip install gcovr
+          gcovr --exclude-directories build --exclude-directories test --html-details
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
