--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Generate a code coverage report using gcovr
         run: |
           python3 -m pip install gcovr
-          gcovr --exclude-directories build --exclude-directories test --html-details
+          gcovr --exclude-directories build --exclude-directories test --html-details output.html
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
