--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -18,11 +18,11 @@ jobs:
       - name: Run CTest
         run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build/test
       - name: Generate a code coverage report using gcovr
-        run: |
-          python3 -m pip install gcovr
-          gcovr --exclude-directories build --exclude-directories test --html-details output.html
+        run: python3 -m pip install gcovr
+      - name: Generate HTML report
+        run: gcovr --exclude-directories build --exclude-directories test --html-details output.html
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
           name: coverage-report
-          path: details.html
+          path: output.html
