--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -26,8 +26,8 @@ jobs:
           coveralls-out: coveralls.json
       - name: Custom report
         run: |
-          python3 -m pip install gcovr
-          python3 -m gcovr --exclude-directories build --exclude-directories test --html-details output.html
+          /usr/bin/python3 -m pip install gcovr
+          /usr/bin/python3 -m gcovr --coveralls coveralls.json
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
