--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -25,7 +25,7 @@ jobs:
             test/*
           coveralls-out: coveralls.json
       - name: Custom report
-        run: /usr/bin/python3 -m gcovr --exclude build/* --exclude test/* --coveralls coveralls.json
+        run: /usr/bin/python3 -m gcovr --coveralls coveralls.json
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
