--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -17,15 +17,8 @@ jobs:
           buildDirectory: "${{ github.workspace }}/build"
       - name: Run CTest
         run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build/test
-      - name: Action report
-        uses: threeal/gcovr-action@v1.0.0
-        with:
-          excludes: |
-            build/*
-            test/*
-          coveralls-out: coveralls.json
       - name: Custom report
-        run: /usr/bin/python3 -m gcovr --coveralls coveralls.json
+        run: /usr/bin/python3 -m gcovr
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
