--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Install gcovr
         run: /usr/bin/python3 -m pip install gcovr
       - name: Custom report
-        run: /usr/bin/python3 -m gcovr --exclude-directories build --exclude-directories test --html --html-details output.html
+        run: /usr/bin/python3 -m gcovr --exclude build --exclude-directories test --html-details output.html
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
