--- a/.github/workflows/cov.yaml
+++ b/.github/workflows/cov.yaml
@@ -17,10 +17,10 @@ jobs:
           buildDirectory: "${{ github.workspace }}/build"
       - name: Run CTest
         run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build/test
-      - name: Install gcovr
-        run: /usr/bin/python3 -m pip install gcovr
-      - name: Custom report
-        run: /usr/bin/python3 -m gcovr --exclude build --exclude-directories test --html-details output.html
+      - name: Run gcovr
+        run: |
+          /usr/bin/python3 -m pip install gcovr
+          /usr/bin/python3 -m gcovr --exclude build --exclude test --html output.html
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
