--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -52,7 +52,7 @@ jobs:
         with:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
           buildDirectory: "${{ github.workspace }}/build"
-      - name: Run CTest and Generate Coverage Report
+      - name: Run CTest
         run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build/test
       - name: Generate Coverage Report
         if: matrix.os == 'ubuntu-latest'
