--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,7 @@ on:
   pull_request:
 
 env:
-  EXTENSIONS_DIR: "${{ github.workspace }}/src/hades_extensions"
+  EXTENSIONS_DIR: ${{ github.workspace }}/src/hades_extensions
 
 jobs:
   python:
@@ -53,15 +53,15 @@ jobs:
       - name: Configure and build CMake
         uses: lukka/run-cmake@v3
         with:
-          cmakeListsTxtPath: "$EXTENSIONS_DIR/CMakeLists.txt"
-          buildDirectory: "$EXTENSIONS_DIR/build"
+          cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
+          buildDirectory: "${{ github.workspace }}/src/hades_extensions/build"
       - name: Run CTest
-        run: ctest --output-on-failure --test-dir EXTENSIONS_DIR/test
+        run: ctest --output-on-failure --test-dir ${{ github.workspace }}/src/hades_extensions/test
       - name: Generate Coverage Report
         if: matrix.os == 'ubuntu-latest'
         run: |
           pip install gcovr
-          gcovr --root $EXTENSIONS_DIR --html-details output.html
+          gcovr --root src/hades_extensions --html-details output.html
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
