--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,14 +54,12 @@ jobs:
         uses: lukka/run-cmake@v3
         with:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
-          buildDirectory: "${{ github.workspace }}/src/hades_extensions/build"
+          buildDirectory: "${{ github.workspace }}/build"
       - name: Run CTest
-        run: ctest --output-on-failure --test-dir ${{ github.workspace }}/src/hades_extensions/test
+        run: ctest --output-on-failure
       - name: Generate Coverage Report
         if: matrix.os == 'ubuntu-latest'
-        run: |
-          pip install gcovr
-          gcovr --root src/hades_extensions --html-details output.html
+        uses: threeal/gcovr-action@v1.0.0
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
