--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -40,6 +40,7 @@ jobs:
           path-to-lcov: ./coverage.lcov
   cpp:
     runs-on: ${{ matrix.os }}
+    working-directory: ${{ github.workspace }}/src/hades_extensions
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
@@ -53,15 +54,14 @@ jobs:
       - name: Configure and build CMake
         uses: lukka/run-cmake@v3
         with:
-          cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
-          buildDirectory: "${{ github.workspace }}/build"
+          buildDirectory: "build"
       - name: Run CTest
         uses: threeal/ctest-action@main
       - name: Generate Coverage Report
         if: matrix.os == 'ubuntu-latest'
         run: |
           pip install gcovr
-          gcovr --exclude build --exclude src/hades_extensions/test --html-details output.html
+          gcovr --exclude build --exclude test --html-details output.html
       - name: Upload coverage report to github
         uses: actions/upload-artifact@v2
         with:
