--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -51,12 +51,11 @@ jobs:
       - name: Set up CMake
         uses: lukka/get-cmake@v3.25.2
       - name: Configure and build CMake
-        working-directory: ${{ github.workspace }}/src/hades_extensions
         uses: lukka/run-cmake@v3
         with:
-          buildDirectory: "build"
+          cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
+          buildDirectory: "${{ github.workspace }}/src/hades_extensions/build"
       - name: Run CTest
-        working-directory: ${{ github.workspace }}/src/hades_extensions
         uses: threeal/ctest-action@main
       - name: Generate Coverage Report
         working-directory: ${{ github.workspace }}/src/hades_extensions
@@ -65,7 +64,6 @@ jobs:
           pip install gcovr
           gcovr --exclude build --exclude test --html-details output.html
       - name: Upload coverage report to github
-        working-directory: ${{ github.workspace }}/src/hades_extensions
         uses: actions/upload-artifact@v2
         with:
           name: coverage-report
