--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,7 +53,7 @@ jobs:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
           buildDirectory: "${{ github.workspace }}/src/hades_extensions/build"
       - name: Run CTest
-        run: ctest --output-on-failure --test-dir "${{ github.workspace }}/src/hades_extensions/test"
+        run: ctest --output-on-failure --test-dir "${{ github.workspace }}/src/hades_extensions"
       - name: Generate Coverage Report
         if: matrix.os == 'ubuntu-latest'
         run: |
