--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,7 +53,9 @@ jobs:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
           buildDirectory: "${{ github.workspace }}/build"
       - name: Run CTest
-        run: ctest --output-on-failure --test-dir "${{ github.workspace }}/build/test -C Debug"
+        run: |
+          ls build
+          ctest --output-on-failure --test-dir "${{ github.workspace }}/build/test -C Debug"
       - name: Generate Coverage Report
         if: matrix.os == 'ubuntu-latest'
         run: |
