--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,8 +54,8 @@ jobs:
           buildDirectory: "${{ github.workspace }}/build"
       - name: Run CTest
         run: |
-          ls build
-          ctest --output-on-failure --test-dir "${{ github.workspace }}/build/test" -C Debug
+          ls build/test
+          ctest --output-on-failure --test-dir "${{ github.workspace }}/build/test"
       - name: Generate Coverage Report
         if: matrix.os == 'ubuntu-latest'
         run: |
