--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -53,11 +53,7 @@ jobs:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
           buildDirectory: "${{ github.workspace }}/build"
       - name: Run CTest
-        run: |
-          ls build
-          echo "frefrt"
-          ls build/test
-          ctest --output-on-failure --test-dir "${{ github.workspace }}/build/test"
+        run: ctest --output-on-failure --test-dir "${{ github.workspace }}/build/test"
       - name: Generate Coverage Report
         if: matrix.os == 'ubuntu-latest'
         run: |
