--- a/.gitignore
+++ b/.gitignore
@@ -1,164 +1,77 @@
-## Pre-generated Stuff
-
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.pyd
-*.so
-
-# Distribution / packaging
+# Build/distribution/packaging
+**/build*/
+*.egg
+*.egg-info/
 .Python
-build/
+.eggs/
+.installed.cfg
+MANIFEST
+__pypackages__/
 develop-eggs/
 dist/
 downloads/
 eggs/
-.eggs/
 lib/
 lib64/
 parts/
 sdist/
+share/python-wheels/
 var/
 wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
+window.build/
+window.dist/
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+# Byte-compiled/optimized/DLL files
+*$py.class
+*.py[cod]
+__pycache__/
 
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+# C/C++ extensions
+*.pyd
+*.so
 
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-coverage.lcov
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
-# Spyder project settings
-.spyderproject
-.spyproject
-
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
+# Documentation
 /site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-
-## Custom stuff
+docs/_build/
 
 # Editor files
 .idea/
 .vscode/
 
-# Log and save files
+# Environments
+.env
+.venv
+ENV/
+env.bak/
+env/
+venv.bak/
+venv/
+
+# Logs/saves
 logs/
+pip-delete-this-directory.txt
+pip-log.txt
 saves/
 
-# CMake files
-cmake-build-debug/
-cmake-build-release/
+# Type checking
+.dmypy.json
+.mypy_cache/
+.pyre/
+.pytype/
+dmypy.json
 
-# Nuitka files
-window.build/
-window.dist/
-
-# Aseprite project
-aseprite/
+# Unit test/coverage reports
+*.cover
+*.py,cover
+.cache
+.coverage
+.coverage.*
+.hypothesis/
+.nox/
+.pytest_cache/
+.tox/
+cover/
+coverage.lcov
+coverage.xml
+htmlcov/
+nosetests.xml
