--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,8 +20,8 @@ jobs:
         uses: lukka/run-cmake@v10.7
         with:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
-          buildDirectory: "${{ github.workspace }}/build"
           configurePreset: "lint"
       - name: Run clang-format
         uses: jidicula/clang-format-action@v4
-        check-path: "${{ github.workspace }}/src/hades_extensions"
+        with:
+          check-path: "${{ github.workspace }}/src/hades_extensions"
