--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -20,18 +20,18 @@ jobs:
         language: ["python", "cpp"]
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4.1.1
       - name: Set up Python 3.11
         if: matrix.language == 'python'
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v4.7.1
         with:
           python-version: "3.11"
       - name: Set up CMake
         if: matrix.language == 'cpp'
-        uses: lukka/get-cmake@v3.25.2
+        uses: lukka/get-cmake@v3.27.7
       - name: Install Poetry
         if: matrix.language == 'python'
-        uses: snok/install-poetry@v1
+        uses: snok/install-poetry@v1.3.4
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
@@ -39,7 +39,7 @@ jobs:
         if: matrix.language == 'python'
         run: poetry install --no-interaction
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
+        uses: github/codeql-action/init@v2.15.3
         with:
           languages: ${{ matrix.language }}
           setup-python-dependencies: false
@@ -48,8 +48,8 @@ jobs:
         uses: lukka/run-cmake@v10.7
         with:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
-          configurePreset: "Lint"
+          configurePreset: "Debug"
       - name: Perform CodeQL analysis
-        uses: github/codeql-action/analyze@v2
+        uses: github/codeql-action/analyze@v2.15.3
         with:
           category: "/language:${{ matrix.language }}"
