--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,6 +22,6 @@ jobs:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
           configurePreset: "Lint"
       - name: Run clang-format
-        uses: jidicula/clang-format-action@v4.11.0
-        with:
-          check-path: "${{ github.workspace }}/src/hades_extensions"
+        run: |
+          cd "${{ github.workspace }}/src/hades_extensions"
+          clang-format -i include/* src/* tests/*
