--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,6 +16,7 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
+        # TODO: Get static analysers and clang-format to run
       - name: Configure and build CMake
         uses: lukka/run-cmake@v10.7
         with:
@@ -24,4 +25,4 @@ jobs:
       - name: Run clang-format
         run: |
           cd "${{ github.workspace }}/src/hades_extensions"
-          clang-format -i **/*.hpp **/*.cpp
+          clang-format -i include/*.hpp src/*.cpp tests/*.cpp
