--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,4 +54,4 @@ jobs:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
           configurePreset: "Coverage"
       - name: Run CTest
-        run: ctest --output-on-failure --test-dir ${{ github.workspace }}/build/tests
+        run: ctest --output-on-failure --test-dir ${{ github.workspace }}/src/hades_extensions/build-coverage/tests
