--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,6 +55,9 @@ jobs:
           cmakeListsTxtPath: "${{ github.workspace }}/src/hades_extensions/CMakeLists.txt"
           configurePreset: "Coverage"
       - name: f
-        run: ls ${{ github.workspace }}/src/hades_extensions/build-coverage
+        run: |
+          ls ${{ github.workspace }}/src/hades_extensions/build-coverage
+          ls ${{ github.workspace }}/src/hades_extensions/build-coverage/tests
+          ls ${{ github.workspace }}/src/hades_extensions/build-coverage/bin
       - name: Run CTest
         run: ctest --output-on-failure --test-dir ${{ github.workspace }}/src/hades_extensions/build-coverage/tests
