--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -60,4 +60,4 @@ jobs:
           ls ${{ github.workspace }}/src/hades_extensions/build-coverage/tests
           ls ${{ github.workspace }}/src/hades_extensions/build-coverage/bin
       - name: Run CTest
-        run: ctest --output-on-failure --test-dir ${{ github.workspace }}/src/hades_extensions/build-coverage/tests
+        uses: threeal/ctest-action@main
