--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,11 +16,9 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
-      - name: Configure and build CMake
+      - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: |
-          cmake --preset Lint
-          cmake --build build-lint
+        run: clang-tidy .
       - name: Run clang-format
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: find . -regex '.*\.\(cpp\|hpp\)' -exec clang-format -style=file -i {} \;
