--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -16,9 +16,11 @@ jobs:
         uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
-      - name: Run clang-tidy
+      - name: Configure CMake
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: clang-tidy .
-      - name: Run clang-format
+        run: cmake --preset Debug
+      - name: Run clang-tidy and clang-format
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: find . -regex '.*\.\(cpp\|hpp\)' -exec clang-format -style=file -i {} \;
+        run: |
+          clang-tidy .
+          find . -regex '.*\.\(cpp\|hpp\)' -exec clang-format -style=file -i {} \;
