--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,7 +10,7 @@ jobs:
   cpp:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4.1.1
       - name: Set up MSVC
         uses: ilammy/msvc-dev-cmd@v1.12.1
@@ -19,8 +19,12 @@ jobs:
       - name: Configure CMake
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cmake --preset Debug
-      - name: Run clang-tidy and clang-format
+      - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: |
-          clang-tidy -p build-debug/compile_commands.json ./**/*.cpp ./**/*.hpp
-          find . -regex '.*\.\(cpp\|hpp\)' -exec clang-format -style=file -i {} \;
+        run: clang-tidy -p build-debug/compile_commands.json ./**/*.cpp ./**/*.hpp
+      - name: Run cppcheck
+        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        run: cppcheck --enable=all --suppress=missingInclude --suppress=missingIncludeSyste --quiet ./**/*.cpp ./**/*.hpp
+      - name: Run clang-format
+        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        run: find . -regex '.*\.\(cpp\|hpp\)' -exec clang-format -style=file -i {} \;
