--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,11 +20,14 @@ jobs:
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cmake --preset Debug
       - name: Run clang-tidy
+        continue-on-error: true
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: clang-tidy -p build-debug/compile_commands.json ./**/*.cpp ./**/*.hpp
       - name: Run cppcheck
+        continue-on-error: true
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cppcheck --enable=all --suppress=missingInclude --suppress=missingIncludeSyste --quiet ./**/*.cpp ./**/*.hpp
       - name: Run clang-format
+        continue-on-error: true
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: find . -regex '.*\.\(cpp\|hpp\)' -exec clang-format -style=file -i {} \;
