--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,4 +56,4 @@ jobs:
           cmake --build build-coverage
       - name: Run CTest
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: ctest --output-on-failure --test-dir build-coverage
+        run: ctest --output-on-failure --no-tests=error --test-dir build-coverage
