--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -45,4 +45,6 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Run clang-format
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \) | xargs clang-format -i -style=file
+        run: |
+          find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \)
+          find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \) | while read -r file; do echo "$file"; clang-format -style=file -i "$file"; done
