--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -36,7 +36,9 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Run cppcheck
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: cppcheck --enable=all --suppress=missingInclude --suppress=missingIncludeSyste --quiet ./**/*.cpp ./**/*.hpp
+        run: |
+          sudo apt-get install cppcheck
+          cppcheck --enable=all --suppress=missingInclude --suppress=missingIncludeSyste --quiet ./**/*.cpp ./**/*.hpp
   clang-format:
     needs: setup
     runs-on: ubuntu-latest
