--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,7 +27,7 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: clang-tidy -p build-debug/compile_commands.json --quiet --std=c++20 ./**/*.cpp ./**/*.hpp
+        run: clang-tidy -p build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
   cppcheck:
     needs: setup
     runs-on: ubuntu-latest
@@ -47,6 +47,4 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Run clang-format
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: |
-          find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \)
-          find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \) | while read -r file; do echo "$file"; clang-format -style=file -i "$file"; done
+        run: find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \) -exec clang-format -i {} \;
