--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,7 +27,9 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: clang-tidy -p build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
+        run: |
+          find . -name compile_commands.json
+          clang-tidy -p build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
   cppcheck:
     needs: setup
     runs-on: ubuntu-latest
@@ -38,7 +40,7 @@ jobs:
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: |
           sudo apt-get install -y -q cppcheck
-          cppcheck --enable=all --suppress=missingInclude --suppress=missingIncludeSystem --quiet ./**/*.cpp ./**/*.hpp
+          cppcheck --enable=all --suppress=missingInclude --suppress=missingIncludeSystem --quiet ./include/ ./src/ ./tests/
   clang-format:
     needs: setup
     runs-on: ubuntu-latest
