--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,6 +19,12 @@ jobs:
       - name: Configure CMake
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cmake --preset Debug
+      - name: find
+        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        run: find . -name compile_commands.json
+      - name: find2
+        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        run: find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \)
   clang-tidy:
     needs: setup
     runs-on: ubuntu-latest
@@ -27,9 +33,7 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: |
-          find . -name compile_commands.json
-          clang-tidy -p build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
+        run: clang-tidy -p build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
   cppcheck:
     needs: setup
     runs-on: ubuntu-latest
@@ -40,7 +44,7 @@ jobs:
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: |
           sudo apt-get install -y -q cppcheck
-          cppcheck --enable=all --suppress=missingInclude --suppress=missingIncludeSystem --quiet ./include/ ./src/ ./tests/
+          cppcheck --enable=all --suppress=missingInclude --suppress=unknownMacro  --quiet ./include/ ./src/ ./tests/
   clang-format:
     needs: setup
     runs-on: ubuntu-latest
