--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,10 +20,8 @@ jobs:
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cmake --preset Debug
       - name: find
-        working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: find . -name compile_commands.json
       - name: find2
-        working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \)
   clang-tidy:
     needs: setup
@@ -33,7 +31,7 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: clang-tidy -p build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
+        run: clang-tidy -p ./build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
   cppcheck:
     needs: setup
     runs-on: ubuntu-latest
