--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,9 +20,7 @@ jobs:
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cmake --preset Debug
       - name: find
-        run: find . -name compile_commands.json
-      - name: find2
-        run: find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \)
+        run: find ~+ -type f -name compile_commands.json
   clang-tidy:
     needs: setup
     runs-on: ubuntu-latest
@@ -51,4 +49,4 @@ jobs:
         uses: actions/checkout@v4.1.1
       - name: Run clang-format
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: find ./include ./src ./tests -type f \( -iname "*.cpp" -o -iname "*.hpp" \) -exec clang-format -i {} \;
+        uses: jidicula/clang-format-action@v4.11.0
