--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,46 +7,44 @@ on:
   pull_request:
 
 jobs:
-  setup:
+  clang-tidy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
-      - name: Set up MSVC
-        uses: ilammy/msvc-dev-cmd@v1.12.1
       - name: Set up CMake
         uses: lukka/get-cmake@v3.27.7
       - name: Configure CMake
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cmake --preset Debug
-      - name: find
-        run: find ~+ -type f -name compile_commands.json
-  clang-tidy:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4.1.1
       - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: clang-tidy -p ./build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
   cppcheck:
-    needs: setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
+      - name: Set up CMake
+        uses: lukka/get-cmake@v3.27.7
+      - name: Configure CMake
+        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        run: cmake --preset Debug
       - name: Run cppcheck
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: |
           sudo apt-get install -y -q cppcheck
           cppcheck --enable=all --suppress=missingInclude --suppress=unknownMacro  --quiet ./include/ ./src/ ./tests/
   clang-format:
-    needs: setup
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
+      - name: Set up CMake
+        uses: lukka/get-cmake@v3.27.7
+      - name: Configure CMake
+        working-directory: "${{ github.workspace }}/src/hades_extensions"
+        run: cmake --preset Debug
       - name: Run clang-format
         uses: jidicula/clang-format-action@v4.11.0
         with:
