--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,14 +12,12 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.1.1
-      - name: Set up CMake
-        uses: lukka/get-cmake@v3.27.7
       - name: Configure CMake
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: cmake --preset Debug
       - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: clang-tidy -p ./build-debug/compile_commands.json --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
+        run: clang-tidy -p ./build-debug/compile_commands.json --quiet
   cppcheck:
     runs-on: ubuntu-latest
     steps:
@@ -33,8 +31,8 @@ jobs:
       - name: Run cppcheck
         working-directory: "${{ github.workspace }}/src/hades_extensions"
         run: |
-          sudo apt-get install -y -q cppcheck
-          cppcheck --enable=all --suppress=missingInclude --suppress=unknownMacro  --quiet ./include/ ./src/ ./tests/
+          sudo apt-get install -y cppcheck
+          cppcheck --enable=all --suppress=unknownMacro --quiet --error-exitcode=10 ./include/ ./src/ ./tests/
   clang-format:
     runs-on: ubuntu-latest
     steps:
