--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,7 +19,7 @@ jobs:
         run: cmake --preset Debug
       - name: Run clang-tidy
         working-directory: "${{ github.workspace }}/src/hades_extensions"
-        run: clang-tidy -p ./build-debug/compile_commands.json --quiet
+        run: clang-tidy --quiet -extra-arg --std=c++20 ./**/*.cpp ./**/*.hpp
   cppcheck:
     runs-on: ubuntu-latest
     steps:
